# ClassEnrollBot-Backend

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/anti_detection/: __init__.py  fingerprint.py  headers.py  human_behavior.py  rate_limiter.py
app/api/: deps.py
app/api/v1/: auth.py  courses.py  notifications.py  ntnu_accounts.py  router.py  users.py  websocket.py
app/core/: encryption.py  exceptions.py  operation_logger.py  security.py
app/db/: database.py  models.py
app/schemas/: __init__.py  course.py  notification.py  ntnu_account.py  user.py
app/services/: captcha_service.py  ntnu_browser_client.py  ntnu_client.py  session_manager.py
app/tasks/: celery_app.py  course_tasks.py  session_tasks.py
app/websocket/: manager.py
scripts/: ntnu_api_explorer.py  ntnu_browser_explorer.py  ntnu_endpoint_explorer.py  ntnu_log_analyzer.py  ntnu_request_recorder.py
tests/: conftest.py
tests/test_api/: test_auth.py
